feat: updated internal libraries, updated meteo, added scheduler into api

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
 ENV=development
 PORT=8080
 DSN=postgresql://user:password@host:post/database?sslmode=disable
+REDIS_ADDR=host:port
+REDIS_USERNAME=
+REDIS_PASSWORD=
 METEOSOURCE_API_KEY=
 METEOSOURCE_URL=https://www.meteosource.com/api/v1/free
