--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,9 @@ services:
 
   init:
     image: i3-meteo:0.0.0
-    build: .
+    build:
+      context: .
+      dockerfile: docker/Dockerfile
     environment:
       - GOOSE_DRIVER=postgres
       - GOOSE_DBSTRING=postgresql://root:root@postgres:5432/database
@@ -36,7 +38,9 @@ services:
 
   api:
     image: i3-meteo:0.0.0
-    build: .
+    build: 
+      context: .
+      dockerfile: docker/Dockerfile
     command: /api
     environment:
       - ENV=development
